[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/speechChoice.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/tres/LunchMenu.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/graphics/ui/dialogue-options.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="choice" type="TextureButton"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -219.0
margin_right = 219.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
self_modulate = Color( 0.937255, 1, 0.913725, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="NinePatchRect"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0196078, 0.027451, 0.0313726, 0.784314 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -3.0
margin_right = -6.0
margin_bottom = -7.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.937255, 1, 0.913725, 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="choiceAnim" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 1 )
anims/show = SubResource( 2 )
[connection signal="mouse_entered" from="." to="." method="_on_speechChoice_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_speechChoice_mouse_exited"]
[connection signal="pressed" from="." to="." method="choice_pressed"]
[connection signal="animation_finished" from="choiceAnim" to="." method="_on_choiceAnim_animation_finished"]
